# BankOperations

./: .env.example  .gitignore  README.md  main.py  mylog.txt  pyproject.toml
data/: operations_cut.json  operations_not_json.json
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_spiral_gen_py.html  z_145eef247bfb46b6_widget_py.html  z_3822a98dc768cb72___init___py.html  z_7d9dd7075f477127___init___py.html  z_7d9dd7075f477127_Задача 10_py.html  z_7d9dd7075f477127_Задача 1_py.html  z_7d9dd7075f477127_Задача 2_py.html  z_7d9dd7075f477127_Задача 3_py.html  z_7d9dd7075f477127_Задача 4_py.html  z_7d9dd7075f477127_Задача 5_py.html  z_7d9dd7075f477127_Задача 6_py.html  z_7d9dd7075f477127_Задача 7_py.html  z_7d9dd7075f477127_Задача 8_py.html  z_7d9dd7075f477127_Задача 9_py.html  z_95b527d577e44160_111_py.html  z_95b527d577e44160_222_py.html  z_95b527d577e44160_Decorators1_py.html  z_95b527d577e44160___init___py.html  z_95b527d577e44160_api_py.html  z_95b527d577e44160_gfg_py.html  z_95b527d577e44160_task5_py.html  z_95b527d577e44160_task_1_py.html  z_95b527d577e44160_task_2_py.html  z_95b527d577e44160_task_3_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_decorators_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_main_py.html  z_a44f0ac069e85531_test_masks_py.html  (+22 more)
(+29 files in other folders)
